# m

Born2beroot/: README.md  signature.txt
C02/ex00/: ft_strcpy.c
C02/ex01/: ft_strncpy.c
C02/ex02/: ft_str_is_alpha.c
C02/ex03/: ft_str_is_numeric.c
C02/ex04/: ft_str_is_lowercase.c
C02/ex05/: ft_str_is_uppercase.c
C02/ex06/: ft_str_is_printable.c
C02/ex07/: ft_strupcase.c
C02/ex08/: ft_strlowcase.c
C02/ex09/: ft_strcapitalize.c
C02/ex10/: ft_strlcpy.c
C02/ex11/: .ft_putstr_non_printable.c.swp  ft_putstr_non_printable.c
Python/: .gitignore
Python/Python00/: Readme.md
Python/Python07v2/: battle.py  capacitor.py  tournament.py
Python/Python08/ex1/: loading.py  pyproject.toml  requirements.txt
ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  print_addr.c  print_char.c  print_char_p.c  print_hex.c  print_int.c  print_uint.c
ft_printf/libft/: ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_memchr.c  ft_memcpy.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strlcat.c  ft_strlen.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  libft.h
ft_pushswap/: Makefile  README.md  atoil.c  ft_split.c  init.c  init_target.c  init_utils.c  list_utils.c  main.c  push.c  push_swap  push_swap.h  rev_rotate.c  rotate.c  swap.c  turk.c
ft_pushswap/libft/: Makefile  ft_calloc.c  ft_isprint.c  (+12 more)
libft/: ft_atoi.c  ft_isalnum.c  ft_lstlast_bonus.c  ft_memmove.c  ft_strdup.c  ft_strjoin.c  ft_strmapi.c  ft_strncmp.c
(+52 files in other folders)
