[tool.poetry]
name = "matrix-loader"
version = "0.1.0"
description = "Matrix loading program for Data Engineering"
authors = ["Student <student@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
